# ml-development-template

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
azure_module/: data_loader.py
core/: config.py
core/data_preparation/: config.py  pipeline.py
core/modeling/: config.py  deployment.py  pipeline.py
data/: MLTable  sample-request.json  sample.csv
notebooks/: 01_Getting_your_data.ipynb  02_Testing_data_prep_module.ipynb  03_Testing_modeling.ipynb  04_Testing_endpoint.ipynb  06_Working_With_Big_Data.ipynb
notebooks/example_configs/: config.yml
notebooks/example_configs/data_prep_example_config/: data_prep.yaml
notebooks/example_configs/modeling_example_config/: linear_regression.yaml
